--- a/PhillipFashionProject/Base.lproj/Main.storyboard
+++ b/PhillipFashionProject/Base.lproj/Main.storyboard
@@ -74,7 +74,7 @@
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="HAI-u2-zG1">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.88128021408839774" green="0.88128021408839774" blue="0.88128021408839774" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.88128021410000001" green="0.88128021410000001" blue="0.88128021410000001" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="12" minimumInteritemSpacing="5" id="TOd-My-uwX">
                             <size key="itemSize" width="155" height="280"/>
                             <size key="headerReferenceSize" width="1" height="47"/>
@@ -253,7 +253,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8QZ-qW-1MX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="719" y="662"/>
+            <point key="canvasLocation" x="674" y="980"/>
         </scene>
         <!--Profile Collection View Controller-->
         <scene sceneID="lOF-xf-gyV">
@@ -324,11 +324,16 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="9F5-4f-57j">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="bookmarks" id="hWs-vx-gEA">
+                            <connections>
+                                <action selector="showRecsClicked:" destination="jAq-xb-THL" id="Bce-Wt-dfS"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="KLC-Qa-ra9">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="z9d-fV-FSS">
-                                <rect key="frame" x="-23" y="-15" width="133" height="30"/>
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="z9d-fV-FSS">
+                                <rect key="frame" x="554" y="9" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Camera">
+                                <state key="normal" image="camera-grey.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -339,11 +344,46 @@
                     </navigationItem>
                     <connections>
                         <segue destination="tHe-xF-e3C" kind="show" identifier="showPhoto" id="HF8-M8-Fak"/>
+                        <segue destination="Oex-XO-f1k" kind="show" identifier="showRecs" id="7p7-dW-Q1C"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SVy-Dm-On0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1426" y="644"/>
+            <point key="canvasLocation" x="1378" y="912"/>
+        </scene>
+        <!--Tinder Style View Controller-->
+        <scene sceneID="DWh-5n-eda">
+            <objects>
+                <viewController id="Oex-XO-f1k" customClass="TinderStyleViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VuV-Yp-ggu"/>
+                        <viewControllerLayoutGuide type="bottom" id="JuL-3s-DOP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eqA-ib-P47">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hIO-9M-abt" customClass="DraggableView">
+                                <rect key="frame" x="51" y="110" width="498" height="329"/>
+                                <color key="backgroundColor" red="0.2156862745" green="0.52941176469999995" blue="0.7843137255" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hIO-9M-abt" firstAttribute="centerX" secondItem="eqA-ib-P47" secondAttribute="centerX" id="04Q-Td-HIQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hIO-9M-abt" secondAttribute="trailing" constant="35" id="FiG-lS-ysb"/>
+                            <constraint firstItem="hIO-9M-abt" firstAttribute="top" secondItem="VuV-Yp-ggu" secondAttribute="bottom" constant="46" id="KZa-CC-aoP"/>
+                            <constraint firstItem="hIO-9M-abt" firstAttribute="leading" secondItem="eqA-ib-P47" secondAttribute="leadingMargin" constant="35" id="mYI-fD-5o2"/>
+                            <constraint firstItem="JuL-3s-DOP" firstAttribute="top" secondItem="hIO-9M-abt" secondAttribute="bottom" constant="112" id="tfb-zE-4jt"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="draggableView" destination="hIO-9M-abt" id="KkG-zQ-4SZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f6U-TG-suJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2049" y="1236"/>
         </scene>
         <!--Users Collection View Controller-->
         <scene sceneID="aiA-6O-eMC">
@@ -433,7 +473,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Emc-SO-BNE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1391" y="1368"/>
+            <point key="canvasLocation" x="1378" y="1977"/>
         </scene>
         <!--Recommendation View Controller-->
         <scene sceneID="mpa-2O-sh3">
@@ -499,7 +539,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Xw-n3-rj4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2077" y="1386"/>
+            <point key="canvasLocation" x="2063" y="1820"/>
         </scene>
         <!--Create View Controller-->
         <scene sceneID="gUd-uJ-or8">
@@ -565,7 +605,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UYF-PM-SMR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2131" y="638"/>
+            <point key="canvasLocation" x="2148" y="546"/>
         </scene>
         <!--Users-->
         <scene sceneID="czE-3l-tAi">
@@ -582,10 +622,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oBK-0n-bOZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="719" y="1386"/>
+            <point key="canvasLocation" x="705" y="1820"/>
         </scene>
     </scenes>
     <resources>
+        <image name="camera-grey.png" width="64" height="64"/>
         <image name="heart-emptyb copy.png" width="32" height="32"/>
         <image name="heart-fullb copy.png" width="32" height="32"/>
         <image name="home32.png" width="32" height="32"/>
